--- a/index.html
+++ b/index.html
@@ -6,50 +6,47 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <title>Elaineflix</title>
+    <title>Elainekdramaflix</title>
 </head>
 
 
 <body>
 
 
-    <header>ElaineFLIX</header>
+    <header>ElainekdramaFLIX</header>
 
 
 
     <section class="chamada">
         <div class="chamada-texto">
-            <H1>ATRAVÉS DO ARANHAVERSO</H1>
-            <p>#homen-aranha</p>
+            <H1>TODOS DORAMAS DUBLADOS </H1>
+            <p>#doramas</p>
         </div>
 
 
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/HB8K0omTmxU?si=b-kY4nlKBGcUq71s"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/jkC_GW5SPMs?si=kV8DGlLAnjh1dwgo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
     <section class="categoria">
-        <h2>Filmes e séries</h2>
+        <h2>Doramas</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
-            <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg"/> 
+            <a href="https://www.youtube.com/watch?v=j29KekFhpqg">
+            <img src="https://img.youtube.com/vi/j29KekFhpqg/maxresdefault.jpg"/> 
         </a>
-        <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-            <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg"/> 
+        <a href="https://www.youtube.com/watch?v=N31NjIBNE2M">
+            <img src="https://img.youtube.com/vi/N31NjIBNE2M/maxresdefault.jpg"/> 
         </a>
-        <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-            <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg"/> 
+        <a href="https://www.youtube.com/watch?v=ud7tHeyA2Ko">
+            <img src="https://img.youtube.com/vi/ud7tHeyA2Ko/maxresdefault.jpg"/> 
         </a>
-        <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-            <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg"/> 
+        <a href="https://www.youtube.com/watch?v=XS8yjPxhRrg">
+            <img src="https://img.youtube.com/vi/XS8yjPxhRrg/maxresdefault.jpg"/> 
         </a>
-        <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-            <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg"/> 
+        <a href="https://www.youtube.com/watch?v=GNsBa17h9mU">
+            <img src="https://img.youtube.com/vi/GNsBa17h9mU/maxresdefault.jpg"/> 
         </a>
         </div>
     </section>
